feature: optimize